<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/home1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REFERENCE YOUR FASHION !!!"
        android:gravity="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_marginRight="3dp"
            android:id="@+id/btn_alamat"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textColor="@color/khaki"
            android:background="@color/hitam"/>

        <Button
            android:layout_marginRight="3dp"
            android:id="@+id/btn_belanja"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/belanja"
            android:textColor="@color/khaki"
            android:background="@color/hitam"/>

        <Button
            android:id="@+id/btn_telepon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/telepon"
            android:textColor="@color/khaki"
            android:background="@color/hitam"/>

    </LinearLayout>

</LinearLayout>